# vllm-blasst-turboquant-ltr-llm-llama31-latency

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: __init__.py  accuracy.py  datasets.py  loadgen.py  metrics.py  plots.py  run_sweep.py
c2/: apply_blasst_kernel_patch.py  blasst_decode_kernel.py  blasst_gqa_decode.py  blasst_ppl.py  blasst_screen.py
configs/: model.yaml
docs/: BENCHMARK.md  C2_BLASST_PLAN.md  C_TIERS.md  REFERENCES.md  RUNBOOK.md  V025_SMOKE.md
env/: b0_vanilla.env  b1_ltr.env
ltr/: README.md  __init__.py
ltr/quant/: __init__.py  eval_accuracy.py  eval_gsm8k.py
ltr/ranker/: __init__.py  dataset.py  eval.py  headtohead.py  losses.py  model.py  ranking_metrics.py  synthesize.py  train.py
ltr/scheduler/: __init__.py  assign.py  priority.py
results/: RESULTS.md
results/summaries/: b0_tq4.json  b0_triton.json  b0_v025.json  b1_triton.json  b1_v025.json  c1_tq4.json  c1_v025.json  c1c2_tq4.json  c1te_v025.json  c2_bf16.json  c2_blasst_ppl.json  c2_gqa_decode.json  c2a_blasst_screen.json  c2a_blasst_screen_m16.json  c2b_decode_bench.json  ctrl_v025.json  gsm8k_bf16_v025.json  gsm8k_c2bf16_v025.json  gsm8k_tq4_v025.json  gsm8k_tq4blasst_v025.json  lctq4blastnc_2048.json  lctq4blastnc_4096.json  lctq4blastnc_512.json  lctq4blastnc_7168.json  lctq4nc_2048.json  lctq4nc_4096.json  lctq4nc_512.json  lctq4nc_7168.json  lcv025_2048.json  lcv025_4096.json  lcv025_512.json  lcv025_7168.json  lcv025ltr_2048.json  lcv025ltr_4096.json  lcv025ltr_512.json  lcv025ltr_7168.json  lcv025tq4_2048.json  lcv025tq4_4096.json  lcv025tq4_512.json  lcv025tq4_7168.json  (+1 more)
serving/: bench_reference.sh  grid_reference_ladder.sh  serve_b0.sh  serve_b1_ltr.sh
serving/v025_blasst/: b0_and_quality.sh  blasst_patch.py  build_patched_kernel.py  build_turboquant_patch.py  c2_serving.sh  c2_serving_tq4.sh  longctx_c2_nochunk.sh  patched_kernel.py  sitecustomize.py  (+2 more)
tests/: test_accuracy.py  test_config.py  test_datasets.py  test_loadgen.py  test_ltr_assign.py  test_ltr_dataset.py  test_ltr_losses.py  test_ltr_metrics.py  test_ltr_model.py  test_ltr_priority.py  test_ltr_train.py  test_metrics.py  test_plots.py  test_run_sweep.py
(+7 files in other folders)
